[build-system]
requires = ["setuptools>=61.0", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "javamew"
version = "0.0.1"
description = "Pure Python Java parser and tools."
authors = [
    { name = "XiaHan", email = "jstzwj@aliyun.com" },
    { name = "FrostMiKu", email = "i@frostmiku.com" },
]
maintainers = [
    { name = "XiaHan", email = "jstzwj@aliyun.com" },
    { name = "FrostMiKu", email = "i@frostmiku.com" },
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "six", "Cython"
]

[project.optional-dependencies]
dev = ["black==23.3.0", "pylint==2.8.2"]


[project.urls]
"Homepage" = "https://github.com/jstzwj/javamew"
"Bug Tracker" = "https://github.com/jstzwj/javamew/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
